// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav /> renders default 1`] = `
.c0 {
  width: 100%;
  padding: 0.7rem 0;
  position: fixed;
  top: 4.8rem;
  left: 0;
  z-index: 200;
  background: #fff;
  box-shadow: 0 3px 6px 0 rgba(104,104,104,0.5);
  opacity: 0;
  transition: opacity 0.2s linear;
}

@media screen and (min-width:40rem) {
  .c0 {
    width: 50%;
    top: 1rem;
    left: 47%;
    box-shadow: none;
    opacity: 1;
  }
}

<nav
  className="c0"
  hide={true}
/>
`;

exports[`<Nav /> renders with theme 1`] = `
.c0 {
  width: 100%;
  padding: 0.7rem 0;
  position: fixed;
  top: 4.8rem;
  left: 0;
  z-index: 200;
  background: #202124;
  box-shadow: 0 3px 6px 0 rgba(104,104,104,0.5);
  opacity: 0;
  transition: opacity 0.2s linear;
}

@media screen and (min-width:40rem) {
  .c0 {
    width: 50%;
    top: 1rem;
    left: 47%;
    box-shadow: none;
    opacity: 1;
  }
}

<nav
  className="c0"
  hide={true}
/>
`;
